--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "reselect": "^4.1.6",
     "stripe": "^9.15.0",
     "styled-components": "^5.3.5",
+    "typed-redux-saga": "^1.5.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
@@ -56,6 +57,7 @@
   },
   "devDependencies": {
     "@types/redux-logger": "^3.0.9",
+    "babel-plugin-macros": "^3.1.0",
     "sass": "^1.52.3"
   }
 }
